--- a/styles/vars.css
+++ b/styles/vars.css
@@ -10,7 +10,6 @@
 
     /* Fonts */
 
-    --default-font: 'Open Sans', sans-serif;
-    --title-font: 'Roboto', sans-serif;
+    --default-font: "Poppins", serif;
 
 }
