--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -7,7 +10,7 @@
 
 body {
     background-color: var(--terciary-color);
-    font-family: var(--title-font);
+    font-family: var(--default-font);
     padding: 20px;
 }
 
@@ -45,4 +48,42 @@ body {
     text-decoration: none;
     color: var(--quaternary-color);
     font-size: 18px;
+}
+
+.presentation-container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: row;
+    margin: 0 auto;
+    background-color: var(--secondary-color);
+    border-radius: 14px;
+    padding: 26px;
+}
+
+.presentation-content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: left;
+    left: 0;
+}
+
+.presentation-content h1 {
+    color: var(--primary-color);
+    font-family: "Poppins", serif;
+    font-weight: 700;
+    font-size: 2.2rem;
+    margin-bottom: 10px;
+}
+
+.presentation-content p {
+    color: var(--quaternary-color);
+    font-family: "Poppins", serif;
+    font-weight: 200;
+    font-size: 1.2rem;
+}
+
+.photo-content img {
+    width: 360px;
 }
