--- a/styles/vars.css
+++ b/styles/vars.css
@@ -7,6 +7,7 @@
     --terciary-color: #696a6a;
     --quaternary-color: #f0f0f0;
     --quinary-color: #000000;
+    --button-color: #424242;
 
     /* Fonts */
 
