--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 * {
@@ -23,6 +22,7 @@ body {
     padding: 12px 10px;
     border-radius: 14px;
     margin-bottom: 20px;
+    width: 70vw;
 }
 
 .navbar {
@@ -59,6 +59,7 @@ body {
     background-color: var(--secondary-color);
     border-radius: 14px;
     padding: 26px;
+    width: 70vw;
 }
 
 .presentation-content {
@@ -85,5 +86,14 @@ body {
 }
 
 .photo-content img {
-    width: 360px;
+    width: 280px;
+}
+
+.presentation-button {
+    border: none;
+    margin-top: 12px;
+    padding: 8px 16px;
+    border-radius: 8px;
+    background-color: var(--primary-color);
+    color: var(--button-color);
 }
