--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Oswald:wght@200..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 * {
     margin: 0;
@@ -11,89 +11,4 @@ body {
     background-color: var(--terciary-color);
     font-family: var(--default-font);
     padding: 20px;
-}
-
-.nav-container {
-    align-items: center;
-    flex-direction: row;
-    width: 100%;
-    margin: 0 auto;
-    background-color: var(--secondary-color);
-    padding: 12px 10px;
-    border-radius: 14px;
-    margin-bottom: 20px;
-    width: 70vw;
-}
-
-.navbar {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    padding: 10px;
-    width: 100%;
-}
-
-.navbar ul {
-    display: flex;
-    width: auto;
-    list-style: none;
-    flex-wrap: wrap;
-}
-
-.navbar ul li {
-    margin: 0 10px;
-}
-
-.navbar a {
-    text-decoration: none;
-    color: var(--quaternary-color);
-    font-size: 18px;
-}
-
-.presentation-container {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-direction: row;
-    margin: 0 auto;
-    background-color: var(--secondary-color);
-    border-radius: 14px;
-    padding: 26px;
-    width: 70vw;
-}
-
-.presentation-content {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: left;
-    left: 0;
-}
-
-.presentation-content h1 {
-    color: var(--primary-color);
-    font-family: "Poppins", serif;
-    font-weight: 700;
-    font-size: 2.2rem;
-    margin-bottom: 10px;
-}
-
-.presentation-content p {
-    color: var(--quaternary-color);
-    font-family: "Poppins", serif;
-    font-weight: 200;
-    font-size: 1.2rem;
-}
-
-.photo-content img {
-    width: 280px;
-}
-
-.presentation-button {
-    border: none;
-    margin-top: 12px;
-    padding: 8px 16px;
-    border-radius: 8px;
-    background-color: var(--primary-color);
-    color: var(--button-color);
 }
