--- a/styles/vars.css
+++ b/styles/vars.css
@@ -3,8 +3,8 @@
     /* Colors */
 
     --primary-color: #00b4cc;
-    --secondary-color: #4c4d4d;
-    --terciary-color: #696a6a;
+    --secondary-color: #29292b;
+    --terciary-color: #19191a;
     --quaternary-color: #f0f0f0;
     --quinary-color: #000000;
     --button-font-color: #424242;
