--- a/styles/main.css
+++ b/styles/main.css
@@ -5,6 +5,7 @@
     background-color: var(--secondary-color);
     padding: 26px;
     border-radius: 14px;
+    margin-bottom: 20px;
 }
 
 .about {
