--- a/styles/media-queries.css
+++ b/styles/media-queries.css
@@ -65,6 +65,11 @@
         margin: 0 20px;
         transition: ease 1s;
     }
+
+    .about {
+        width: 100%;
+        transition: ease 1s;
+    }
 }
 
 @media screen and (max-width: 500px) {
