--- a/styles/header.css
+++ b/styles/header.css
@@ -12,10 +12,11 @@
 
 .navbar {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
     padding: 10px;
     width: 100%;
+    flex-wrap: wrap;
 }
 
 .navbar ul {
