--- a/styles/skills.css
+++ b/styles/skills.css
@@ -2,6 +2,7 @@
     display: flex;
     padding: 40px 0px;
     margin: 0 auto;
+    margin-bottom: 40px;
     border-radius: 14px;
     background-color: var(--secondary-color);
     width: 70vw;
@@ -55,6 +56,10 @@
 
 #css {
     color: #264de4;
+}
+
+#node {
+    color: #8cc84b;
 }
 
 @keyframes scroll {
