--- a/styles/media-queries.css
+++ b/styles/media-queries.css
@@ -4,8 +4,20 @@
     .presentation-container,
     .about-me,
     .skills,
-    .container-projects {
-        max-width: 90%;
+    .container-projects,
+    .contact {
+        transition: ease 1s;
+        margin: 0 auto;
+        display: flex;
+        justify-content: center;
+        width: 90vw;
+        margin-bottom: 10px;
+        margin-top: 10px;
+    }
+
+    .project-content {
+        margin: 0 auto;
+        margin-bottom: 10px;
         transition: ease 1s;
     }
 
@@ -22,9 +34,10 @@
         transition: ease 1.8s;
     }
 
-    .hard-skills{
+    .hard-skills {
         animation: scroll 12s linear infinite;
     }
+
     .hard-skills i {
         margin: 0 50px;
         transition: ease 1s;
@@ -32,7 +45,8 @@
 
 }
 
-@media screen and (max-width: 1050px){
+@media screen and (max-width: 1050px) {
+
     .project-content,
     .project-content img {
         flex-direction: column;
@@ -59,13 +73,19 @@
         width: 80%;
         margin-bottom: 10px;
     }
+
+    body,
+    html {
+        padding: 0;
+    }
 }
 
 @media screen and (max-width: 960px) {
 
-    .hard-skills{
+    .hard-skills {
         animation: scroll 10s linear infinite;
     }
+
     .hard-skills i {
         margin: 0 40px;
         transition: ease 1s;
@@ -74,9 +94,10 @@
 
 @media screen and (max-width: 750px) {
 
-    .hard-skills{
+    .hard-skills {
         animation: scroll 8s linear infinite;
     }
+
     .hard-skills i {
         margin: 0 30px;
         transition: ease 1s;
@@ -88,9 +109,10 @@
         display: none;
     }
 
-    .hard-skills{
+    .hard-skills {
         animation: scroll 6s linear infinite;
     }
+
     .hard-skills i {
         margin: 0 20px;
         transition: ease 1s;
@@ -108,9 +130,10 @@
         transition: ease 1s;
     }
 
-    .hard-skills{
+    .hard-skills {
         animation: scroll 4s linear infinite;
     }
+
     .hard-skills i {
         margin: 0 10px;
         transition: ease 1s;
