--- a/styles/footer.css
+++ b/styles/footer.css
@@ -56,3 +56,25 @@ a {
     color: #abdde4;
     transition: ease-in 200ms;
 }
+
+.back-to-top {
+    display: none;
+    position: fixed;
+    top: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 100;
+    background-color: var(--primary-color);
+    color: white;
+    border: none;
+    border-radius: 50px;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: opacity 0.3s ease-in-out;
+}
+
+.back-to-top:hover {
+    background-color: var(--secondary-color);
+}
