--- a/styles/media-queries.css
+++ b/styles/media-queries.css
@@ -3,7 +3,7 @@
     .nav-container,
     .presentation-container,
     .about-me,
-    .skills,
+    #skills,
     .container-projects,
     .contact {
         transition: ease 1s;
@@ -34,11 +34,11 @@
         transition: ease 1.8s;
     }
 
-    .hard-skills {
+    #skills .hard-skills {
         animation: scroll 12s linear infinite;
     }
 
-    .hard-skills i {
+    #skills .hard-skills i {
         margin: 0 50px;
         transition: ease 1s;
     }
@@ -82,11 +82,11 @@
 
 @media screen and (max-width: 960px) {
 
-    .hard-skills {
+    #skills .hard-skills {
         animation: scroll 10s linear infinite;
     }
 
-    .hard-skills i {
+    #skills .hard-skills i {
         margin: 0 40px;
         transition: ease 1s;
     }
@@ -94,11 +94,11 @@
 
 @media screen and (max-width: 750px) {
 
-    .hard-skills {
+    #skills .hard-skills {
         animation: scroll 8s linear infinite;
     }
 
-    .hard-skills i {
+    #skills .hard-skills i {
         margin: 0 30px;
         transition: ease 1s;
     }
@@ -109,11 +109,11 @@
         display: none;
     }
 
-    .hard-skills {
+    #skills .hard-skills {
         animation: scroll 6s linear infinite;
     }
 
-    .hard-skills i {
+    #skills .hard-skills i {
         margin: 0 20px;
         transition: ease 1s;
     }
@@ -130,11 +130,11 @@
         transition: ease 1s;
     }
 
-    .hard-skills {
+    #skills .hard-skills {
         animation: scroll 4s linear infinite;
     }
 
-    .hard-skills i {
+    #skills .hard-skills i {
         margin: 0 10px;
         transition: ease 1s;
     }
