new project in progress

--- a/styles/main.css
+++ b/styles/main.css
@@ -63,6 +63,16 @@ p {
     margin-bottom: 40px;
 }
 
+.project-content h3 strong {
+    color: rgb(192, 204, 223);
+}
+
+.project-content #loading {
+    height: 50%;
+    display: block;
+    margin: 0 auto;
+}
+
 .project-content img {
     display: flex;
     justify-content: left;
