--- a/styles/media-queries.css
+++ b/styles/media-queries.css
@@ -57,6 +57,12 @@
         margin-bottom: 10px;
     }
 
+    #loading {
+        height: 45%;
+        display: block;
+        margin: 0 auto;
+    }
+
     body,
     html {
         padding: 0;
